k8s/roles/roles-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roles-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /v1/roles/$2
spec:
  ingressClassName: nginx
  rules:
  - host: api.rnr.local
    http:
      paths:
      - path: /v1/roles(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: roles-service
            port:
              number: 8002
